Add module-info and update slf4j to a module-friendly version (#10)